--- a/src/components/Articles/Articles.css
+++ b/src/components/Articles/Articles.css
@@ -23,13 +23,12 @@ li {
 
 p {
     font-family: 'Montserrat', sans-serif;
-    font-size: 16px;
+    font-size: 15px;
     text-align: justify;
 }
 
 .date {
     font-size: 15px;
-    font-weight: bold;
     color: #474747;
     text-align: right;
 }
@@ -38,4 +37,21 @@ p {
     font-size: 15px;
     color: #7b7b7b;
     text-align: left;
+}
+
+.articleImg{
+    max-width: 500px;
+    display: block;
+}
+
+.articleContent{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 15px;
+    justify-content: center;
+    display: block;
+    float: left;
+}
+
+.articleMain {
+
 }
