--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Roboto:wght@500&display=swap');
+
 .mainFooter {
     border-top: coral solid 3px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 15px;
+    color: coral;
 }
