--- a/src/components/Article/Article.css
+++ b/src/components/Article/Article.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Roboto:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Zilla+Slab+Highlight:wght@700&display=swap');
 
 h2 {
     font-family: 'Roboto', sans-serif;
@@ -27,6 +28,7 @@ h2 {
     font-size: 14px;
     color: #474747;
     display: block;
+    clear: both;
     text-align: right;
 }
 
@@ -36,6 +38,7 @@ h2 {
     font-size: 12px;
     color: #7b7b7b;
     display: block;
+    clear: both;
     text-align: right;
 }
 
@@ -67,8 +70,8 @@ img.articleImage {
 }
 
 .articleMain {
-    margin: 0 20%;
+    margin: 0 15%;
     display: block;
-    height: 160px;
+    height: 150px;
     align-content: center;
 }
