--- a/src/components/Article/Article.css
+++ b/src/components/Article/Article.css
@@ -2,13 +2,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Zilla+Slab+Highlight:wght@700&display=swap');
 
 h2 {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 34px;
     color: #444444;
 }
 
 .articleTitle {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 30px;
     color: #3d3d3d;
     margin: 12px 0;
@@ -19,14 +19,14 @@ h2 {
     text-align: center;
     display: block;
     clear: both;
-    margin-bottom: 15px;
+    margin-bottom: 20px;
 }
 
 .articleDate {
     height: 20px;
     font-family: 'Roboto', sans-serif;
     font-size: 14px;
-    color: #474747;
+    color: #313131;
     display: block;
     clear: both;
     text-align: right;
@@ -70,7 +70,7 @@ img.articleImage {
 }
 
 .articleMain {
-    margin: 0 15%;
+    margin: 0 20%;
     display: block;
     height: 150px;
     align-content: center;
