--- a/src/components/Articles/FavoriteArticles/FavoriteArticles.css
+++ b/src/components/Articles/FavoriteArticles/FavoriteArticles.css
@@ -7,3 +7,11 @@ h2 {
     font-family: 'Montserrat', sans-serif;
     text-align: center;
 }
+
+h3 {
+    font-family: 'Montserrat', sans-serif;
+    text-align: center;
+    font-size: 28px;
+    color: darkcyan;
+    letter-spacing: 1px;
+}
