--- a/src/components/Article/ReadMore/FullTextModal/FullTextModal.css
+++ b/src/components/Article/ReadMore/FullTextModal/FullTextModal.css
@@ -19,14 +19,19 @@
     border-radius: 5px;
 }
 
-.readArticle {
-    width: 120px;
+.close_article {
+    width: 110px;
+    height: 35px;
     background-color: coral;
     color: white;
     font-family: 'Roboto', sans-serif;
-    font-size: 12px;
+    font-size: 16px;
     border: none;
     cursor: pointer;
+}
+
+.close_article:active{
+    outline: none;
 }
 
 .readArticle:focus {
