--- a/src/components/Article/AddCommentButton/AddCommentButton.css
+++ b/src/components/Article/AddCommentButton/AddCommentButton.css
@@ -2,8 +2,8 @@
     float: right;
     display: block;
     width: 130px;
-    height: 25px;
-    background-color: #d7c513;
+    height: 20px;
+    background-color: rgba(167, 156, 21, 0.63);
     color: white;
     font-family: 'Montserrat', sans-serif;
     font-size: 12px;
