--- a/src/components/Article/LikeArticleButton/LikeArticleButton.css
+++ b/src/components/Article/LikeArticleButton/LikeArticleButton.css
@@ -1,8 +1,8 @@
 .likeArticle {
     float: right;
     width: 130px;
-    height: 25px;
-    background-color: #1a66d4;
+    height: 20px;
+    background-color: rgba(26, 102, 212, 0.83);
     color: white;
     font-family: 'Montserrat', sans-serif;
     font-size: 12px;
@@ -17,8 +17,8 @@
 .likedArticle {
     float: right;
     width: 130px;
-    height: 25px;
-    background-color: #1ab377;
+    height: 20px;
+    background-color: rgba(26, 179, 119, 0.84);
     color: white;
     font-family: 'Montserrat', sans-serif;
     font-size: 12px;
