--- a/src/components/Article/ViewComments/ViewCommentsButton/ViewCommentsButton.css
+++ b/src/components/Article/ViewComments/ViewCommentsButton/ViewCommentsButton.css
@@ -1,13 +1,14 @@
 .view_comments_btn {
     float: right;
     width: 130px;
-    height: 20px;
-    background-color: rgb(255, 255, 255);
-    color: #313131;
+    height: 17px;
+    background-color: rgba(85, 161, 150, 0.65);
+    color: #ffffff;
     font-family: 'Montserrat', sans-serif;
     font-size: 10px;
     border: none;
     cursor: pointer;
+    margin-right: 5px;
 }
 
 .view_comments_btn:focus {
