--- a/src/components/Article/ViewComments/ViewComments.css
+++ b/src/components/Article/ViewComments/ViewComments.css
@@ -3,7 +3,6 @@
 .comments_modal {
     background: rgba(0, 0, 0, 0.3);
     position: fixed;
-    overflow: auto;
     top: 0;
     right: 0;
     bottom: 0;
@@ -11,26 +10,46 @@
     padding: 30px;
 }
 
+.article_title_comments {
+    margin: 5px;
+}
+
+.comments_title{
+    margin: 5px;
+}
+
 .comments_modal_content {
-    max-width: 800px;
-    max-height: 450px;
+    max-width: 700px;
+    max-height: 500px;
     margin: 10vh auto;
     background: white;
-    padding: 30px;
+    padding: 15px;
     border-radius: 5px;
+    overflow: auto;
 }
 
 .close_comments {
     width: 110px;
-    height: 20px;
+    height: 25px;
     background-color: coral;
     color: white;
     font-family: 'Roboto', sans-serif;
-    font-size: 12px;
+    font-size: 11px;
     border: none;
     cursor: pointer;
 }
 
-.close_comments:active{
+.close_button_div{
+    position: relative;
+    text-align: right;
+    width: 100%;
+    clear: both;
+}
+
+.comments{
+    padding-bottom: 10px;
+}
+
+.close_comments:active {
     outline: none;
 }
