--- a/src/components/Header/InfoDot/InfoDot.css
+++ b/src/components/Header/InfoDot/InfoDot.css
@@ -1,10 +1,27 @@
 .infoDot {
-    align-content: center;
-    height: 10px;
-    width: 10px;
+    position: fixed;
+    top: 12px;
+    left: 330px;
+
+    height: 18px;
+    width: 18px;
     border-radius: 100px;
     background-color: #16bd4a;
-    position: fixed;
-    top: 20px;
-    left: 330px;
+    color: white;
+    text-align: center;
+    font-size: 12px;
+    font-weight: bold;
+    padding: 1px;
+
+    animation-name: favBatch;
+    animation-duration: 1s;
+}
+
+@keyframes favBatch {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 100;
+    }
 }
