--- a/src/components/Header/Navigation/Login/LogMessage/LogMessage.css
+++ b/src/components/Header/Navigation/Login/LogMessage/LogMessage.css
@@ -1,14 +1,47 @@
-.logMessage{
+.logMessage {
     width: 186px;
     height: 13px;
     text-align: center;
     position: fixed;
     top: 50px;
-    left: 350px;
+    left: 360px;
     font-family: 'Montserrat', sans-serif;
     font-size: 10px;
     letter-spacing: 1px;
-    border-left: #e01616 solid 3px;
-    border-right: #e01616 solid 3px;
     color: black;
+    animation-name: logMsg;
+    animation-duration: 1s;
+}
+
+.bottomLine {
+    width: 188px;
+    height: 2px;
+    margin-top: 1px;
+    margin-left: -3px;
+    background-color: #2fb17d;
+    animation-name: botL;
+    animation-duration: 2.3s;
+    animation-delay: 1.2s;
+}
+
+@keyframes botL {
+    from {
+        width: 184px;
+        background-color: #2fb17d;
+    }
+    to {
+        width: 0;
+        background-color: #e57d3f;
+    }
+}
+
+@keyframes logMsg {
+    from {
+        opacity: 0;
+        top: 0;
+    }
+    to {
+        opacity: 100;
+        top: 50px;
+    }
 }
