--- a/src/components/Header/Navigation/Login/LogMessage/LogMessage.css
+++ b/src/components/Header/Navigation/Login/LogMessage/LogMessage.css
@@ -25,23 +25,25 @@
 }
 
 @keyframes botL {
-    from {
+    0% {
         width: 184px;
         background-color: #2fb17d;
     }
-    to {
+    50% {
+        background-color: #ff7700;
+    }
+    100% {
         width: 0;
-        background-color: #e57d3f;
+        background-color: #fd0000;
     }
 }
 
 @keyframes logMsg {
     from {
-        opacity: 0;
+        display: none;
         top: 0;
     }
     to {
-        opacity: 100;
         top: 50px;
     }
 }
